--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,7 +44,7 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-top: 90px;
+    padding-top: 45px;
 }
 
 .apresentacao-container{
@@ -128,6 +128,31 @@ body{
     margin-right: 100px;
 }
 
+.botoes-CTA{
+    display: flex;
+    gap: 30px;
+    padding-left: 6px;
+    padding-top: 35px;
+}
+
+.botoes-CTA .botao{
+    background: linear-gradient(to bottom, var(--cor-destaque), #6800c3);
+    font-size: 25px;
+    cursor: pointer;
+    border-radius: 15px;
+    color: var(--cor-texto);
+    border: none;
+    padding: 8px 18px;
+    transform: scale(1);
+}
+
+.botoes-CTA button:hover{
+    background: #8902ff ;
+    transition: transform 0.3s;
+    transform: scale(1.10);
+    box-shadow: 0px 0px 15px var(--cor-destaque);
+}
+
 .apresentacao-foto img {
     background: linear-gradient(to bottom, #6300C6, #450087);
     width: 400px;
@@ -140,7 +165,7 @@ body{
     width: 60px;
     justify-content: center;
     margin: 10px auto;
-    margin: 160px auto;
+    margin: 155px auto;
 
 }
 
