--- a/src/css/style.css
+++ b/src/css/style.css
@@ -212,8 +212,13 @@ body{
     box-shadow: 0px 0px 15px var(--cor-destaque);
 }
 
+.tecnicas-icones svg{
+    width: 100px;
+    height: 100px;
+    fill: var(--cor-destaque)
+}
 
-.habilidades-container svg{
+.softSkills-icones svg{
     width: 100px;
     height: 100px;
     fill: var(--cor-destaque)
