--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,9 +35,35 @@ body{
     width: 100%;
 }
 
-.botao-LuzTema{
-    border: 2px solid var(--cor-texto);
-    padding: 20px 20px;
+.botao-tema{
+    position: relative;
+}
+
+.botao-tema button{
+    z-index: 1;
+    padding: 16px 35px;
+    margin-right: 20px;
+    border: none;
+    border-radius: 50px;
+    background-color: var(--cor-destaque);
+    color: var(--cor-texto);
+}
+
+.botao-tema .bolinha-botao{
+    position: absolute;
+    z-index: 2;
+    background-color: white;
+    border-radius: 50%;
+    width: 27px;
+    height: 27px;
+    left: 20%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: left 0.3s ease;
+}
+
+.botao-tema.ativo .bolinha-botao{
+    left: 58%;
 }
 
 .secaoApresentacao{
