--- a/src/css/style.css
+++ b/src/css/style.css
@@ -47,6 +47,7 @@ body{
     border-radius: 50px;
     background-color: var(--cor-destaque);
     color: var(--cor-texto);
+    cursor: pointer;
 }
 
 .botao-tema .bolinha-botao{
@@ -56,14 +57,15 @@ body{
     border-radius: 50%;
     width: 27px;
     height: 27px;
-    left: 20%;
+    left: 4%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateY(-50%);
     transition: left 0.3s ease;
+    cursor: pointer;
 }
 
 .botao-tema.ativo .bolinha-botao{
-    left: 58%;
+    left: 43%;
 }
 
 .secaoApresentacao{
