Estrutura das seções de Projetos e Contatos Finalizada - Revisar depois

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -256,3 +256,9 @@ body{
     width: 500px;
     height: 300px;
 }
+
+.contato-imagem svg{
+    width: 100px;
+    height: 100px;
+    fill: var(--cor-destaque)
+}
