--- a/src/css/style.css
+++ b/src/css/style.css
@@ -262,3 +262,10 @@ body{
     height: 100px;
     fill: var(--cor-destaque)
 }
+
+.rodape {
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+    min-height: 50px;
+}
