Estilização da Seção Habilidades - WIP

--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -3,7 +3,11 @@
 
     --cor-fundo: #13131F;
 
+    --cor-habilidade-bloco: #212132;
+
     --cor-texto: white;
+
+    --cor-botao-hover: #8902ff;
 
     --cor-html: #e34c26;
 
