--- a/src/css/style.css
+++ b/src/css/style.css
@@ -269,7 +269,7 @@ body{
 .tecnicas-icones{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 80px;
+    gap: 100px;
     max-width: 1000px;
     margin: 0 auto;
 }
@@ -284,7 +284,22 @@ body{
     padding: 20px 0px;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
+    position: relative;
+}
+
+.tecnicas-icones .habilidade-bloco ::after{
+    position: absolute;
+    content: "";
+    height: 4px;
+    width: 100%;
+    bottom: -2px;
+    background: linear-gradient(to bottom, var(--cor-destaque), #6800c3);
+    left: 0;
     
+}
+
+.tecnicas-icones p{
+    margin-bottom: 3px;
 }
 
 .softSkills-icones svg{
