--- a/src/css/style.css
+++ b/src/css/style.css
@@ -386,7 +386,7 @@ body{
     margin-right: auto;
 }
 
-.grid.projetos .projeto-card{
+.grid.projetos .projeto-bloco{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -397,6 +397,53 @@ body{
     width: 500px;
     height: 300px;
 }
+
+.projeto-imagem{
+    position: relative; 
+    width: 100%;
+    height: 0;
+    padding-bottom: 60%;
+    overflow: hidden;
+    transition: tranform 0.5s;
+    transform: scale(1);
+}
+
+.projeto-bloco .projeto-img-rodape{
+    position: absolute;
+    width: 100px;
+    padding: 20px 200px;
+    background-color: red;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+
+
+.projeto-imagem::after{
+    position: absolute;
+    bottom: -2px;
+    content: "";
+    width: 100%;
+    height: 6px;
+    left: 0;
+    background: linear-gradient(to right, var(--cor-destaque), #a300c3);
+}
+
+.projeto-img-rodape p{
+    font-size: 12px;
+    background-color: blue;
+    padding: ;
+}
+
+
+
+
+
+
+
+
+
+
 
 .contato-imagem svg{
     width: 100px;
