--- a/src/css/style.css
+++ b/src/css/style.css
@@ -404,20 +404,35 @@ body{
     height: 0;
     padding-bottom: 60%;
     overflow: hidden;
-    transition: tranform 0.5s;
+}
+
+.projeto-imagem .projeto-camada-escura:hover{
+    opacity: 0;
+}
+
+.projeto-bloco{
+    position: relative;
+    transition: 0.5s;
     transform: scale(1);
 }
 
-.projeto-bloco .projeto-img-rodape{
-    position: absolute;
-    width: 100px;
-    padding: 20px 200px;
-    background-color: red;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
+.projeto-bloco:hover{
+    transform: scale(1.18);
+    transition: 0.3s;
+    cursor: pointer;
 }
 
-
+.projeto-bloco .projeto-img-rodape{
+    position: relative;
+    width: 100px;
+    padding: 8px 200px;
+    background-color: var(--cor-habilidade-bloco);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .projeto-imagem::after{
     position: absolute;
@@ -427,23 +442,30 @@ body{
     height: 6px;
     left: 0;
     background: linear-gradient(to right, var(--cor-destaque), #a300c3);
+    z-index: 2;
 }
 
 .projeto-img-rodape p{
-    font-size: 12px;
-    background-color: blue;
-    padding: ;
+    font-size: 14px;
+    white-space: nowrap;
 }
 
+.projeto-camada-escura{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(5, 5, 5, 0.60);;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 1;
+    transition: 0.5;
+}
 
-
-
-
-
-
-
-
-
+.projeto-camada-escura p{
+    font-size: 20px;
+}
 
 .contato-imagem svg{
     width: 100px;
