--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+
 body{
     background-color: var(--cor-fundo);
     color: var(--cor-texto);
@@ -5,35 +6,57 @@ body{
     padding: 0;
     max-width: 100%;
     font-family: "Nunito", sans-serif;
+    scroll-behavior: smooth;
 
 }
 .cabecalho{
+    position: fixed; 
+    width: 100%;
     background-color: var(--cor-fundo);
+    z-index: 100;
+}
+
+.cabecalho-conteudo{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 5px;
 }
 
+.linhaReta{
+    height: 1px;
+    background-color:var(--cor-destaque);
+    width: 100%;
+}
 
 .botoes-nav{
+    scroll-behavior: smooth;
     display: flex;
     gap: 35px;
     padding: 25px;
+}
+
+.botoes-nav a{
+    transition: transform 0.3s ;
+    transform: scale(1);
+}
+
+.botoes-nav a:hover{
+    transform: scale(1.15);
+    color: var(--cor-destaque);
+    animation: ;
+
+}
+
+.botoes-nav-container{
     margin: 0 auto;
+    padding-left: 110px;
 }
 
 .botoes-nav a{
     color: var(--cor-texto);
     font-size: 20px;
     text-decoration: none;
-}
-
-
-.linhaReta{
-    height: 1px;
-    background-color: var(--cor-destaque);
-    width: 100%;
 }
 
 .botao-tema{
@@ -79,6 +102,7 @@ body{
 .apresentacao-container{
     font-size: 20px;
     margin-left: 100px;
+    padding-top: 4%;
 }
 
 .apresentacao-container h1{
@@ -200,6 +224,7 @@ body{
 .secaoSobre {
     display: flex;
     justify-content: space-around;
+    padding-top: 3%;
 
 }
 
@@ -403,7 +428,7 @@ body{
     width: 100%;
     height: 0;
     padding-bottom: 60%;
-    overflow: hidden;
+
 }
 
 .projeto-hover:hover .projeto-camada-escura{
@@ -479,7 +504,7 @@ body{
     justify-content: center;
     align-items: center;
     padding-top: 15%;
-    padding-bottom: 20%;
+    padding-bottom: 15%;
     gap: 200px;
 }
 
