--- a/src/css/style.css
+++ b/src/css/style.css
@@ -225,6 +225,12 @@ body{
     box-shadow: 0px 0px 15px var(--cor-destaque);
 }
 
+.botoes-CTA a{
+    color: var(--cor-texto);
+    text-decoration: none;
+    font-size: 25px;
+}
+
 .apresentacao-foto img {
     background: linear-gradient(to bottom, #6300C6, #450087);
     width: 400px;
@@ -266,6 +272,8 @@ body{
     align-items: center;
     padding: 5%;
 }
+
+
 
 .botao-curriculo button{
     background: linear-gradient(to bottom, var(--cor-destaque), #6800c3);
